<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.chgk.ui.Raiting.RatingFragment"
        android:label="@string/string_timetable"
        tools:layout="@layout/timetable_fragment" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.chgk.ui.Schedule.ScheduleFragment"
        android:label="@string/string_values"
        tools:layout="@layout/values_fragment" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home2"
            app:destination="@id/navigation_home"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.chgk.ui.Settings.SettingsFragment"
        android:label="@string/string_settings"
        tools:layout="@layout/settings_fragment" />
</navigation>
